# ooz

./: .gitignore  CMakeLists.txt  README.md  compr_entropy.cpp  compr_leviathan.cpp  compress.cpp  kraken.cpp  lzna.cpp  ooz.h  stdafx.h
.github/workflows/: build.yml
.woodpecker/: build.yml  main.yml  release.yml
